[ALF-1276] Отчёт "Сроки прохлждения маршрута"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4727 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-jasperreports-forms/api/pom.xml
+++ b/lecm-jasperreports-forms/api/pom.xml
@@ -17,7 +17,7 @@
 	<description>this is reports generator api module</description>
 
 	<properties>
-		<module.log.level>info</module.log.level>
+		<module.log.level>debug</module.log.level>
 		<alfproject.version>4.0</alfproject.version>
 		<jasperreports.fonts.version>4.0.0</jasperreports.fonts.version>
 		<!-- <jasperreports.version>5.0</jasperreports.version> -->
