сборка зависимости (mmsc) добавлена как модуль
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4740 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-scaner/pom.xml
+++ b/lecm-scaner/pom.xml
@@ -18,6 +18,7 @@
     <modules>
         <module>repo</module>
         <module>share</module>
+        <module>scanner-applet/mmsc</module>
         <module>scanner-applet/scanner-applet</module>
     </modules>
 </project>
