--- a/lecm-scaner/scanner-applet/scanner-applet/pom.xml
+++ b/lecm-scaner/scanner-applet/scanner-applet/pom.xml
@@ -7,6 +7,7 @@
 		<groupId>ru.it.lecm.scaner</groupId>
 		<artifactId>scaner</artifactId>
 		<version>0.5.1</version>
+        <relativePath>../../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>scanner-applet</artifactId>
