--- a/lecm-scaner/scanner-applet/scanner-applet/pom.xml
+++ b/lecm-scaner/scanner-applet/scanner-applet/pom.xml
@@ -2,7 +2,7 @@
 		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-  
+
 	<parent>
 		<groupId>ru.it.lecm.scaner</groupId>
 		<artifactId>scaner</artifactId>
@@ -29,7 +29,7 @@
 		<swing-worker.version>1.1</swing-worker.version>
 		<itext.version>2.1.7</itext.version>
 	</properties>
-  
+
 	<dependencies>
 		<!-- compile dependencies -->
 		<dependency>
@@ -85,7 +85,7 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/jai_imageio.jar</systemPath>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>uk.co.mmscomputing</groupId>
 			<artifactId>mmsc</artifactId>
@@ -97,7 +97,7 @@
 			<version>1.6.0</version>
 		</dependency>
 	</dependencies>
-  
+
 	<build>
 		<plugins>
 			<plugin>
@@ -174,7 +174,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>keytool-maven-plugin</artifactId>
-				<version>1.2</version>
+				<version>1.3</version>
 				<executions>
 					<execution>
 						<phase>generate-resources</phase>
@@ -185,9 +185,9 @@
 					</execution>
 					<execution>
 						<phase>generate-resources</phase>
-						<id>genkey</id>
+						<id>generateKeyPair</id>
 						<goals>
-							<goal>genkey</goal>
+							<goal>generateKeyPair</goal>
 						</goals>
 					</execution>
 				</executions>
