Отчёты: fix искажение файлов макетов *.odt.gen при сборке.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4784 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -370,6 +370,8 @@
 							<nonFilteredFileExtension>ftl</nonFilteredFileExtension>
 							<nonFilteredFileExtension>prpt</nonFilteredFileExtension>
 							<nonFilteredFileExtension>jasper</nonFilteredFileExtension>
+							<nonFilteredFileExtension>odt</nonFilteredFileExtension>
+							<nonFilteredFileExtension>gen</nonFilteredFileExtension>
 						</nonFilteredFileExtensions>
 					</configuration>
 				</plugin>
@@ -564,7 +566,7 @@
                 <module>lecm-iReferent-integration</module>
                 <module>lecm-experts</module>
                 <module>lecm-contracts-fake</module>
-				<module>lecm-scaner</module>
+                <module>lecm-scaner</module>
             </modules>
         </profile>
 	</profiles>
