[~] Упорядоченны зависимости между модулями lecm-statemachine и statemachine-editor
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4828 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-statemachine-editor/repo/pom.xml
+++ b/lecm-statemachine-editor/repo/pom.xml
@@ -56,10 +56,8 @@
 		</dependency>
 		<dependency>
 			<groupId>ru.it.lecm.statemachine</groupId>
-			<artifactId>statemachine-repo</artifactId>
+			<artifactId>statemachine-api</artifactId>
 			<version>${platform.version}</version>
-			<scope>system</scope>
-			<systemPath>${project.basedir}/../../lecm-statemachine/repo/target/statemachine-repo-${platform.version}/lib/statemachine-repo-${platform.version}.jar</systemPath>
 		</dependency>
 		<dependency>
 			<groupId>org.tinyjee.jgraphx</groupId>
