--- a/pom.xml
+++ b/pom.xml
@@ -467,6 +467,7 @@
 					<configuration>
 						<sourceDirectory>${basedir}/src/main/config/reportdefinitions</sourceDirectory>
 						<outputDirectory>${project.build.outputDirectory}/reportdefinitions</outputDirectory>
+                        <compiler>net.sf.jasperreports.engine.design.JRJdk13Compiler</compiler>
 					</configuration>
 					<executions>
 						<execution>
