прокинут webContext для дальнейшего вытаскивания данных пользователя
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4924 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-iReferent-integration/repo/pom.xml
+++ b/lecm-iReferent-integration/repo/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>statemachine-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.5</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
