--- a/lecm-errands/repo/pom.xml
+++ b/lecm-errands/repo/pom.xml
@@ -117,6 +117,11 @@
             <artifactId>statemachine-api</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>ru.it.lecm.reports</groupId>
+            <artifactId>lecm-reports-jar</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
     </dependencies>
     <!--
