--- a/lecm-jasperreports-forms/pom.xml
+++ b/lecm-jasperreports-forms/pom.xml
@@ -25,6 +25,7 @@
 		<module>api</module>
 		<module>repo</module>
 		<module>share</module>
+        <module>jar</module>
 	</modules>
 
 </project>
