рефакторинг модуля отчетная деятельность - провайдеры для отчетов по договорам вынесены в модуль договора
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4934 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -114,13 +114,11 @@
 		    <artifactId>notifications-repo-api</artifactId>
 		    <version>${project.version}</version>
 	    </dependency>
-		<!--
 		<dependency>
 			<groupId>ru.it.lecm.reports</groupId>
-			<artifactId>lecm-reports-api</artifactId>
+			<artifactId>lecm-reports-jar</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		  -->
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
