Таблицы значений. [~] настройки для формы редактирования и просмотра
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4937 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake.properties
+++ b/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake.properties
@@ -7,3 +7,7 @@ page.lecm-contract-fake_document=Contracts (fake)
 button.lecm-contract-fake_document.new=New Contract Fake
 label.create-lecm-contract-fake_document=Create Contract Fake
 label.filter-lecm-contract-fake_document=Contracts (fake)
+
+label.tab1=Attribute
+label.tab2=Table
+label.tab3=Table
