Таблицы значений. [+] добавлено табличное представление для договорной деятельности [+] добавлен справочник "Статусы этапов" [~] настройки для формы редактирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4942 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -66,3 +66,6 @@ label.filter-lecm-additional-document_additionalDocument=Additional Documents
 contracts.contractor.createNew=Add a partner
 
 contract.contractAdditionalDocumentCancel.baseOnDocument=Reason
+
+label.contracts.stage=Stages of the contract
+label.contracts.main=Main attribute
