рефакторинг модуля регномеров. Теперь регномера для типов документов создаются по требованию а сам модуль не требует зависимостей от бутстрапа других модулей
выпилил дублируюущуюся зависимость из машины состояний

git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4946 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-regnumbers/repo/pom.xml
+++ b/lecm-regnumbers/repo/pom.xml
@@ -88,6 +88,10 @@
 			<version>${project.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+		</dependency>
 	</dependencies>
 
 	<scm>
