Договора. [~] подправлены настройки для формы редактирования [~] подправлена модель табличной структуры [~] подправлены переводы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4949 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
@@ -12,3 +12,5 @@ lecm-contract-table-structure_model.association.lecm-contract-table-structure_re
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.description=Responsible
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_tableDataRow-assoc.title=Status stages
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_tableDataRow-assoc.description=Status stages
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.title=Attachments
+lecm-contract-table-structure_model.association.lecm-contract-table-structure_attachments-temp-assoc.description=Attachments
