--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -69,3 +69,5 @@ contract.contractAdditionalDocumentCancel.baseOnDocument=Reason
 
 label.contracts.stage=Stages of the contract
 label.contracts.main=Main attribute
+
+label.contracts.attachments=Contracts > Attachments
