другой компилятор, с предыдущим были проблемы в сборке на JDK7
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4951 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/pom.xml
+++ b/pom.xml
@@ -467,7 +467,7 @@
 					<configuration>
 						<sourceDirectory>${basedir}/src/main/config/reportdefinitions</sourceDirectory>
 						<outputDirectory>${project.build.outputDirectory}/reportdefinitions</outputDirectory>
-                        <compiler>net.sf.jasperreports.engine.design.JRJdk13Compiler</compiler>
+                        <compiler>net.sf.jasperreports.engine.design.JRJdtCompiler</compiler>
 					</configuration>
 					<executions>
 						<execution>
