[~] Изменена схема сборки конечного приложения. Сборка перенесена из папки install в папку target
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4953 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/server/share/pom.xml
+++ b/server/share/pom.xml
@@ -297,7 +297,7 @@
 						</goals>
 						<configuration>
 							<includeTypes>amp</includeTypes>
-							<outputDirectory>${project.build.directory}/../../install/amps/share</outputDirectory>
+							<outputDirectory>${project.build.directory}/../../target/amps/share</outputDirectory>
 							<overWriteReleases>true</overWriteReleases>
 							<overWriteIfNewer>true</overWriteIfNewer>
 							<overWriteSnapshots>true</overWriteSnapshots>
@@ -319,7 +319,7 @@
 									<destFileName>share.war</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${project.build.directory}/../../install/war</outputDirectory>
+							<outputDirectory>${project.build.directory}/../../target/war</outputDirectory>
 							<overWriteReleases>true</overWriteReleases>
 							<overWriteIfNewer>true</overWriteIfNewer>
 							<overWriteSnapshots>true</overWriteSnapshots>
