--- a/server/alfresco/pom.xml
+++ b/server/alfresco/pom.xml
@@ -399,7 +399,7 @@
 						</goals>
 						<configuration>
 							<includeTypes>amp</includeTypes>
-							<outputDirectory>${project.build.directory}/../../install/amps/alfresco</outputDirectory>
+							<outputDirectory>${project.build.directory}/../../target/amps/alfresco</outputDirectory>
 							<overWriteReleases>true</overWriteReleases>
 							<overWriteIfNewer>true</overWriteIfNewer>
 							<overWriteSnapshots>true</overWriteSnapshots>
@@ -421,7 +421,7 @@
 									<destFileName>alfresco.war</destFileName>
 								</artifactItem>
 							</artifactItems>
-							<outputDirectory>${project.build.directory}/../../install/war</outputDirectory>
+							<outputDirectory>${project.build.directory}/../../target/war</outputDirectory>
 							<overWriteReleases>true</overWriteReleases>
 							<overWriteIfNewer>true</overWriteIfNewer>
 							<overWriteSnapshots>true</overWriteSnapshots>
