Show inactive in Document History
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4968 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/history/datagrid/history.datagrid.get.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/history/datagrid/history.datagrid.get.properties
@@ -1,1 +1,2 @@
-logicecm.base.show-arhive.label=Secondary
+logicecm.base.show-secondary.label=Show Secondary
+logicecm.base.show-arhive.label=Show Arhived
