[~] форматирование и чистка  кода в Сервисе Отчетность [~] измения в Отчетах для ДОГОВОРОВ
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5014 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/pom.xml
+++ b/lecm-contracts/repo/pom.xml
@@ -119,6 +119,11 @@
 			<artifactId>lecm-reports-jar</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+        <dependency>
+			<groupId>ru.it.lecm.approval</groupId>
+			<artifactId>approval-repo-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
