В списки рассылок уведомлений добавлены доверенные лица при включённом делегировании
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5015 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-notifications/repo/pom.xml
+++ b/lecm-notifications/repo/pom.xml
@@ -68,6 +68,12 @@
 		    <scope>provided</scope>
 	    </dependency>
         <!-- Don't add here amp dependencies as it will break amp packaging -->
+        <dependency>
+            <groupId>ru.it.lecm.delegation</groupId>
+            <artifactId>lecm-delegation-repo-api</artifactId>
+            <version>${project.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <!--
        The scm is required for the buildnumber-maven-plugin which is required
