ALF-1608: Механизм подсчета формул для числовых полей (Min, Max, AVG, Total) - модели данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5040 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model.properties
@@ -6,6 +6,8 @@ lecm-contract-table-structure_model.property.lecm-contract-table-structure_start
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date.description=Start date
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.title=End date
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.description=End date
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.title=Stage amount
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.description=Stage amount
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.title=Status
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.description=Status
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.title=Responsible
