[~] добавил в базовую запись таблицы поле, в котором будет храниться порядковый номер записи.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5060 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents.properties
@@ -26,6 +26,11 @@ lecm-doc-members_model.property.lecm-doc-members_group.description=Group
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.title=Employee
 lecm-doc-members_model.association.lecm-doc-members_employee-assoc.description=Employee
 
+lecm-document_model.type.lecm-document_tableDataRow.title=Table row
+lecm-document_model.type.lecm-document_tableDataRow.description=Table row
+lecm-document_model.property.lecm-document_indexTableRow.title=Index
+lecm-document_model.property.lecm-document_indexTableRow.description=Index table row
+
 statemachine.state.privileges.INITIATOR=Initiator
 statemachine.state.privileges.CORRECTOR=Corrector
 statemachine.state.privileges.READER=Reader
