--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts.properties
@@ -68,6 +68,6 @@ contracts.contractor.createNew=Add a partner
 contract.contractAdditionalDocumentCancel.baseOnDocument=Reason
 
 label.contracts.stage=Stages of the contract
-label.contracts.main=Main attribute
+label.contracts.main=Main data
 
 label.contracts.attachments=Contracts > Attachments
