[~]  в контрол datagrid-association-control.ftl добавлены действия переместить вверх и вниз.  [~] добавлена отдельная колонка в грид для действий переместить вверх и вниз.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5140 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/datagrid/base.grid.get.properties
+++ b/lecm-base/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/base-share/datagrid/base.grid.get.properties
@@ -37,6 +37,10 @@ actions.duplicate-row=Duplicate
 actions.delete-row=Delete
 actions.version=Preview Version
 actions.more=More
+actions.expand=Expand
+actions.tableRowUp=Move up
+action.tableRowDown=Move Down
+action.addRow=Insert
 
 # Search
 button.search=Search
