[~] Подправил переводы для контрола datagrid-association-control.ftl
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5155 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share.properties
@@ -3,6 +3,10 @@ label.column.actions=Actions
 actions.add=Add
 actions.edit=Edit
 actions.delete-row=Delete
+actions.expand=Expand
+actions.tableRowUp=Move up
+action.tableRowDown=Move Down
+action.addRow=Insert
 logicecm.view=View
 logicecm.employee.view=Employee View
 
